[gd_scene load_steps=11 format=3 uid="uid://4hw4aprax5mh"]

[ext_resource type="Theme" uid="uid://5whm1igkt23h" path="res://Themes/GD-Theme.tres" id="1_st7se"]
[ext_resource type="Script" uid="uid://bv2d5efo5m373" path="res://main_2.gd" id="2_x4hqb"]
[ext_resource type="FontFile" uid="uid://iscudh8eq2uc" path="res://Fonts/FiraCode-Medium.ttf" id="3_71i5j"]
[ext_resource type="Script" uid="uid://436v1ibnsbic" path="res://bgDraw.gd" id="6_hdyhr"]
[ext_resource type="Script" uid="uid://cry40ri24sip7" path="res://fgDraw.gd" id="9_c1wdb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_er6ho"]

[sub_resource type="ViewportTexture" id="ViewportTexture_rco11"]
viewport_path = NodePath("PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer2/PanelContainer3/PanelContainer/SubViewport2")

[sub_resource type="ViewportTexture" id="ViewportTexture_k8xwg"]
viewport_path = NodePath("PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer2/PanelContainer3/PanelContainer/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_bkvlp"]
viewport_path = NodePath("PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer2/PanelContainer3/SpriteWindow")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k8xwg"]

[node name="Control" type="Control" groups=["Main"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_st7se")
script = ExtResource("2_x4hqb")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2

[node name="btnLoad" type="Button" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Load File"

[node name="VSeparator3" type="VSeparator" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="btnSave" type="Button" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Save File
"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="btnSpriteMaker" type="Button" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Sprite Maker"

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="btnRAM" type="Button" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Show Stacks
"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 26
text = "Code"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CodeEdit" type="CodeEdit" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 525)
layout_direction = 0
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_71i5j")
theme_override_font_sizes/font_size = 20
placeholder_text = "Type Code Here"
emoji_menu_enabled = false
wrap_mode = 1
indent_wrapped_lines = true
minimap_draw = true
caret_blink = true
caret_multiple = false
line_folding = true
gutters_draw_line_numbers = true
gutters_zero_pad_line_numbers = true
gutters_draw_fold_gutter = true
indent_use_spaces = true
indent_automatic = true

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="btnRun" type="Button" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Compile / Run"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_er6ho")

[node name="btnReset" type="Button" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Reset"

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="Label" parent="PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 0.498039, 0.313726, 1)
theme_override_font_sizes/font_size = 26
text = "Powered by AMC Forth (Display: 800px x 480px)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer3" type="PanelContainer" parent="PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer2"]
layout_mode = 2

[node name="SpriteWindow" type="SubViewport" parent="PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer2/PanelContainer3"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
msaa_2d = 3
screen_space_aa = 1
use_taa = true
use_hdr_2d = true
canvas_item_default_texture_filter = 3
gui_disable_input = true
size = Vector2i(800, 480)
render_target_update_mode = 4

[node name="sprites" type="Node2D" parent="PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer2/PanelContainer3/SpriteWindow"]

[node name="PanelContainer" type="SubViewportContainer" parent="PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer2/PanelContainer3"]
visibility_layer = 3
texture_filter = 5
layout_mode = 2
size_flags_vertical = 3

[node name="SubViewport" type="SubViewport" parent="PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer2/PanelContainer3/PanelContainer"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
msaa_2d = 3
screen_space_aa = 1
use_taa = true
use_hdr_2d = true
canvas_item_default_texture_filter = 3
gui_disable_input = true
size = Vector2i(800, 480)
render_target_clear_mode = 1
render_target_update_mode = 4

[node name="BG" type="Node2D" parent="PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer2/PanelContainer3/PanelContainer/SubViewport" groups=["Nodes2"]]
script = ExtResource("6_hdyhr")

[node name="SubViewport2" type="SubViewport" parent="PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer2/PanelContainer3/PanelContainer"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
msaa_2d = 2
screen_space_aa = 1
use_taa = true
use_hdr_2d = true
canvas_item_default_texture_filter = 3
gui_disable_input = true
size = Vector2i(800, 480)
render_target_clear_mode = 1
render_target_update_mode = 4

[node name="FG" type="Node2D" parent="PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer2/PanelContainer3/PanelContainer/SubViewport2" groups=["Nodes2"]]
script = ExtResource("9_c1wdb")

[node name="spFG" type="Sprite2D" parent="PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer2/PanelContainer3/PanelContainer"]
texture = SubResource("ViewportTexture_rco11")
centered = false

[node name="spBG" type="Sprite2D" parent="PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer2/PanelContainer3/PanelContainer"]
texture = SubResource("ViewportTexture_k8xwg")
centered = false

[node name="spSP" type="Sprite2D" parent="PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer2/PanelContainer3"]
position = Vector2(15, 15)
texture = SubResource("ViewportTexture_bkvlp")
centered = false

[node name="Label2" type="Label" parent="PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 26
text = "Command Line"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CommandLine" type="LineEdit" parent="PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer2"]
layout_mode = 2
clear_button_enabled = true
caret_blink = true
caret_force_displayed = true

[node name="lblDisplay2" type="RichTextLabel" parent="PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 26
theme_override_font_sizes/bold_font_size = 26
bbcode_enabled = true
text = "[center]Console Output[/center]"
fit_content = true

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Commands" type="RichTextLabel" parent="PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer2/PanelContainer2"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 16
theme_override_font_sizes/bold_font_size = 16
bbcode_enabled = true
scroll_following = true
shortcut_keys_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer2"]
layout_mode = 2

[node name="btnClearOP" type="Button" parent="PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Clear Console"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_k8xwg")

[node name="btnCopyOP" type="Button" parent="PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Copy Console"

[node name="ASP_Music" type="AudioStreamPlayer" parent="." groups=["Music"]]
bus = &"Music"

[node name="ASP_Sfx" type="AudioStreamPlayer" parent="." groups=["Sfx"]]
bus = &"Sfx"

[node name="DlgSave" type="FileDialog" parent="."]
auto_translate_mode = 1
initial_position = 1
size = Vector2i(800, 600)
popup_window = true
dialog_hide_on_ok = true
access = 1
filters = PackedStringArray("\".fth\"")

[node name="DlgLoad" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(800, 600)
popup_window = true
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 1

[connection signal="pressed" from="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer4/btnLoad" to="." method="_on_btn_load_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer4/btnSave" to="." method="_on_btn_save_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer4/btnSpriteMaker" to="." method="_on_btn_sprite_maker_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer4/btnRAM" to="." method="_on_btn_ram_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/btnRun" to="." method="_on_btn_run_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/btnReset" to="." method="_on_btn_reset_pressed"]
[connection signal="text_submitted" from="PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer2/CommandLine" to="." method="_on_command_line_text_submitted"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer2/HBoxContainer/btnClearOP" to="." method="_on_btn_clear_op_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/PanelContainer2/VBoxContainer2/HBoxContainer/btnCopyOP" to="." method="_on_btn_copy_op_pressed"]
[connection signal="file_selected" from="DlgSave" to="." method="_on_dlg_save_file_selected"]
[connection signal="file_selected" from="DlgLoad" to="." method="_on_dlg_load_file_selected"]
